# gram_server

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
cookbook/: pyproject.toml  pytest.ini  requirements.txt  schema.py  settings.py  urls.py
cookbook/gram_server/: admin.py  apps.py
cookbook/gram_server/management/commands/: populate_sample_data.py
cookbook/gram_server/migrations/: 0001_initial.py  0002_add_preference_table.py  0003_user_add_price_updated.py
cookbook/gram_server/models/: __init__.py  crops.py  preferences.py  sales_receipt.py
cookbook/gram_server/views/application/: mutations.py  schema.py  utils.py
cookbook/gram_server/views/application/types/: __init__.py  types.py
cookbook/gram_server/views/user/: mutations.py  schema.py
cookbook/gram_server/views/user/types/: types.py
cookbook/tests/: conftest.py  crops_query_test.py  factories.py  me_query_test.py  set_preference_mutation_test.py
cookbook/tests/snapshots/: snap_crops_query_test.py  snap_me_query_test.py  snap_set_preference_mutation_test.py
